# pytron

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  GUIDE.md  LICENSE  MANIFEST.in  NATIVE_PROTOCOL_RFC.md  PytronCalculator.spec  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  VAP.md  build.py  index.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: guardrails.yml  lint.yml  macos-package.yml  publish.yml  tests.yml  windows-package.yml
api/: index.html
examples/: advanced_app.py  calculator_app.py  hello_world.py  react_app.py
examples/05-database-crud/: app.py
examples/app1/: README.md  app.py  settings.json
examples/assets/: index.html
examples/chat_application/: README.md  app.py  settings.json
examples/pytron-1.01-vite-example/: app.spec
examples/react_ui/: package-lock.json  package.json
pytron/: __init__.py  application.py  bindings.py  cli.py  console.py  core.py  inspector.py  menu.py  plugin.py  router.py  serializer.py  state.py  system.py  tray.py  updater.py  utils.py  webview.py  window.py
pytron/apputils/: config.py  native.py  shell.py  windows.py
pytron/pack/secure_loader/: Cargo.toml  app.rc  build_loader.py  requirements.json
pytron/pack/secure_loader/src/: config.rs  main.rs  patcher.rs  python_runtime.rs  security.rs  ui.rs
search/: search_index.json
tests/: test_cli.py  test_lifecycle.py  test_pack_builds.py  test_platform_ops.py  test_plugin.py  test_secure_pack.py  test_serializer.py  test_state.py  test_windows.py
(+38 files in other folders)
